# Callback_Quoter

./: .build.sh  .clang-format  .clang-tidy  .envrc  .gitignore  CMakeLists.txt  Callback_Quoter.mpc  Consumer_Handler.cpp  Consumer_Handler.h  Consumer_Input_Handler.cpp  Consumer_Input_Handler.h  Consumer_Signal_Handler.cpp  Consumer_Signal_Handler.h  Consumer_i.cpp  Consumer_i.h  Doxyfile  Naming_Client.h  Notifier_Input_Handler.cpp  Notifier_Input_Handler.h  Notifier_i.cpp  Notifier_i.h  README  README.rst  Supplier_Timer_Handler.cpp  Supplier_Timer_Handler.h  Supplier_i.cpp  Supplier_i.h  consumer.cpp  notifier.cpp  run_test.pl  supplier.cpp
